{
    "name": "Gameplay",
    "maps": [
        {
            "name": "Keyboard",
            "id": "a409bfc4-33c3-4925-95b1-0b5f3d289ff7",
            "actions": [
                {
                    "name": "AxisX",
                    "type": "Value",
                    "id": "b40c6b8a-1a9f-4173-b6e1-585e43e5a90d",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "b05f1579-a2d1-4654-be1f-5afeeb33b184",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Rellenar",
                    "type": "Button",
                    "id": "c5a6a162-1047-40b2-9946-c0d1f0a58b16",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AxisY",
                    "type": "Value",
                    "id": "3e68c48b-f6a2-459a-992a-7a1fad21684b",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Letters",
                    "id": "9068841a-97f1-4c91-aef7-1e9610ba3d93",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AxisX",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "99a6846e-c3ba-46d6-85fb-9a16f152ce7a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Computer",
                    "action": "AxisX",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "b74aacf4-ee59-4370-bcd8-9b8be949d3af",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Computer",
                    "action": "AxisX",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0af1038d-d7b4-4a0b-9343-5d1e6b92e0f7",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Computer",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6e990b45-28b8-4280-95eb-68574d743b2e",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "Computer",
                    "action": "Rellenar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Letters",
                    "id": "ac7f0d30-9e74-4140-8f21-3ae3b53fea2a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AxisY",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "67685d20-2f0e-469c-9451-e8e5ba5da984",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Computer",
                    "action": "AxisY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "79237068-f00d-42f3-a34b-c8941cd4b98e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Computer",
                    "action": "AxisY",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Mouse",
            "id": "2d772ae0-6f81-4fca-88f0-d6311c4c9224",
            "actions": [
                {
                    "name": "DetectMouse",
                    "type": "Value",
                    "id": "ffa7d3c9-df24-4f32-9652-5fd099e426b9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7994156b-dca3-47e5-94b1-f2e8673cc220",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "DetectMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "New control scheme",
            "bindingGroup": "New control scheme",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Computer",
            "bindingGroup": "Computer",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}